# htmltomd

./: LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
htmltomd/: __init__.py
src/: htmltomd.py
tests/: test_htmltomd.py
